Fix hero image spacing

--- a/client/src/components/HomeImage/HomeImage.css
+++ b/client/src/components/HomeImage/HomeImage.css
@@ -4,7 +4,7 @@
   background-image: url("../../assets/home-image.jpg");
   background-size: cover;
   width: 80%;
-  margin: 0 auto;
+  margin: 5% auto 0;
   text-align: left;
   padding-left: 13%;
   padding-top: 15%;
